tests/cases/compile_fail/game_mouse_down_bad_types.lsc
main() -> i64 do
  println(game_mouse_down(0, "left"))
  return 0
end
